--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mdi/font": "^3.2.89",
     "axios": "^0.18.0",
     "cson": "^5.1.0",
+    "electron": "^4.0.0",
     "node-machine-id": "^1.1.10",
     "opn": "^5.4.0",
     "vue": "^2.5.21",
