--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "@mdi/font": "^3.2.89",
     "axios": "^0.18.0",
     "cson": "^5.1.0",
+    "deepmerge": "^3.0.0",
     "electron": "^4.0.0",
+    "is-electron": "^2.2.0",
     "node-machine-id": "^1.1.10",
     "opn": "^5.4.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
+    "vuex": "^3.0.1",
     "xml-js": "^1.6.8"
   },
   "devDependencies": {
