--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-machine-id": "^1.1.10",
     "opn": "^5.4.0",
     "vue": "^2.5.21",
+    "vue-click-outside": "^1.0.7",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1",
     "xml-js": "^1.6.8"
