--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue": "^2.5.21",
     "vue-click-outside": "^1.0.7",
     "vue-router": "^3.0.2",
+    "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
     "xml-js": "^1.6.8"
   },
