--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "Nexodus",
   "version": "1.0.0",
   "description": "A 3rd-party launcher for nexon games",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NEXODUS_TARGET=web webpack-dev-server --inline --hot",
+    "dist": "echo \"Not Implemented Yet\"",
+    "watch": "cross-env NEXODUS_TARGET=electron webpack --watch",
+    "build": "cross-env NEXODUS_TARGET=electron NODE_ENV=production webpack",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -34,8 +37,10 @@
     "deepmerge": "^3.0.0",
     "electron": "^4.0.0",
     "is-electron": "^2.2.0",
+    "moment": "^2.23.0",
     "node-machine-id": "^1.1.10",
     "opn": "^5.4.0",
+    "sweetalert2": "^7.33.1",
     "vue": "^2.5.21",
     "vue-click-outside": "^1.0.7",
     "vue-router": "^3.0.2",
@@ -48,6 +53,7 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.4",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "less": "^3.9.0",
@@ -56,6 +62,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^3.0.0",
     "vue-loader": "^15.4.2",
+    "vue-svg-loader": "^0.12.0-alpha.1",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
