--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "@mdi/font": "^3.2.89",
+    "auto-launch": "^5.0.5",
     "axios": "^0.18.0",
     "cson": "^5.1.0",
     "deepmerge": "^3.0.0",
@@ -40,6 +41,7 @@
     "moment": "^2.23.0",
     "node-machine-id": "^1.1.10",
     "opn": "^5.4.0",
+    "ps-list": "^6.0.0",
     "sweetalert2": "^7.33.1",
     "vue": "^2.5.21",
     "vue-click-outside": "^1.0.7",
