--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Nexodus",
-  "version": "0.0.2-beta",
+  "version": "0.0.3-beta",
   "description": "A 3rd-party launcher for nexon games",
   "main": "src/index.js",
   "scripts": {
@@ -48,6 +48,9 @@
     "opn": "^5.4.0",
     "ps-list": "^6.0.0",
     "sweetalert2": "^7.33.1",
+    "typeface-exo-2": "0.0.54",
+    "typeface-nanum-square": "^1.1.0",
+    "typeface-notosans-kor": "^1.0.2",
     "vue": "^2.5.21",
     "vue-click-outside": "^1.0.7",
     "vue-router": "^3.0.2",
@@ -82,6 +85,7 @@
   "build": {
     "appId": "com.khinenw.nexodus",
     "files": [
+      "app/images/Nexodus.png",
       "dist/**/*",
       "src/**/*",
       "index.html"
@@ -99,7 +103,7 @@
           ]
         }
       ],
-      "icon": "app/images/Nexodus.ico"
+      "icon": "app/images/Nexodus.png"
     }
   }
 }
